devel:
- added param -ppi for P-Preferred-Identity 
- added param -pai for P-Asserted-Identity 
- sipsend: added param --local_port to force local port
- sipinvite: added param --local_port to force local port
- sipexten: 
  - added param -ofile to save results
  - added param -f to filter response code
v3.3 (Nov/2022):
- sipflood: 
  - added param -th to allow threads
  - added params -b -a -min -max to create malformed headers
- sipscan: 
  - manage large ranges of IP networks. Fixed memory leak problems
  - can now run faster. Supports 800 threads without memory consumption
  - added param -random to randomize target hosts
- sipdigestleak
  - now can attack several IP addresses or network ranges
  - added param -ping to ping the host and connect to them only if it is alive
  - added param --file lo load IPs from a file, with format (ip:port/proto)
- sipenumerate:
  - use threads to run faster
  - show fingerprinting to give more information
- sipping:
  - new module to check if a server/device is alive
- rtpbleedinject:
  - new module to inject RTP frames when RTPBleed vulnerability is present 
- wssend:
  - new module to send SIP messages over WebSockets
- sipfuzzer:
  - new module to perform a SIP fuzzing test on several SIP methods
- global:
  - bug fixes

v3.2 (Sep/2022)
- sipsend: 
  - added params from_tag, to_tag, branch, callid, cseq, sdp
  - added params user and pass to send a second message with auth if we obtain a code 401/407
  - added param --sdes to send cipher keys in SDP
  - added param --local-ip to force it in case of multiple IP addresses
- sipinvite: 
  - added param --no-sdp to send the INVITE without SDP
  - added param --sdes to send cipher keys in SDP
  - now it is possible to send to a range of callers (To-User) and a range of callees (From-User)
  - added param --local-ip to force it in case of multiple IP addresses
- sipenumerate:
  - added verbose mode
- siprcrack: 
  - added param lenght to force the size of extensions