@@ -114,7 +114,7 @@ class SipInvite:
             tag = generate_random_string(8, 8, 'hex')
 
             msg = create_message('INVITE', self.localip, self.contact_domain, src, self.from_name, self.from_domain,
-                                 dst, self.to_name, self.to_domain, self.proto, self.domain, self.user_agent, lport, branch, callid, tag, '1', '', '', 1, '', self.sdp, '', self.route, self.ppi, self.pai)
+                                 dst, self.to_name, self.to_domain, self.proto, self.domain, self.user_agent, lport, branch, callid, tag, '1', '', '', 1, '', self.sdp, '', self.route, self.ppi, self.pai, '')
 
             print(self.c.YELLOW +
                   '[=>] Request INVITE from %s to %s' % (src, dst))
@@ -180,7 +180,7 @@ class SipInvite:
                     print(self.c.YELLOW +
                           '[=>] Request ACK from %s to %s' % (src, dst))
                     msg = create_message('ACK', self.localip, self.contact_domain, src, self.from_name, self.from_domain,
-                                         dst, self.to_name, self.to_domain, self.proto, self.domain, self.user_agent, lport, branch, callid, tag, '1', totag, '', 1, '', 0, via, self.route, '', '')
+                                         dst, self.to_name, self.to_domain, self.proto, self.domain, self.user_agent, lport, branch, callid, tag, '1', totag, '', 1, '', 0, via, self.route, '', '', '')
 
                     if self.verbose == 1 and self.ofile == '':
                         print(self.c.YELLOW + msg)
@@ -232,7 +232,7 @@ class SipInvite:
                         print(self.c.YELLOW +
                               '[=>] Request INVITE from %s to %s' % (src, dst))
                         msg = create_message('INVITE', self.localip, self.contact_domain, src, self.from_name, self.from_domain,
-                                             dst, self.to_name, self.to_domain, self.proto, self.domain, self.user_agent, lport, branch, callid, tag, '2', totag, digest, auth_type, '', self.sdp, via, self.route, self.ppi, self.pai)
+                                             dst, self.to_name, self.to_domain, self.proto, self.domain, self.user_agent, lport, branch, callid, tag, '2', totag, digest, auth_type, '', self.sdp, via, self.route, self.ppi, self.pai, '')
 
                         if self.verbose == 1 and self.ofile == '':
                             print(self.c.YELLOW + msg)
@@ -282,7 +282,7 @@ class SipInvite:
                     print(self.c.YELLOW +
                           '[=>] Request ACK from %s to %s' % (src, dst))
                     msg = create_message('ACK', self.localip, self.contact_domain, src, self.from_name, self.from_domain,
-                                         dst, self.to_name, self.to_domain, self.proto, self.domain, self.user_agent, lport, branch, callid, tag, '2', totag, digest, auth_type, '', 0, via, self.route, '', '')
+                                         dst, self.to_name, self.to_domain, self.proto, self.domain, self.user_agent, lport, branch, callid, tag, '2', totag, digest, auth_type, '', 0, via, self.route, '', '', '')
 
                     if self.verbose == 1 and self.ofile == '':
                         print(self.c.YELLOW + msg)
@@ -303,7 +303,7 @@ class SipInvite:
                         print(self.c.YELLOW +
                               '[=>] Request REFERfrom %s  to %s' % (src, dst))
                         msg = create_message('REFER', self.localip, self.contact_domain, src, self.from_name, self.from_domain,
-                                             dst, self.to_name, self.to_domain, self.proto, self.domain, self.user_agent, lport, branch, callid, tag, '3', totag, '', 1, self.transfer, 0, '', '', '')
+                                             dst, self.to_name, self.to_domain, self.proto, self.domain, self.user_agent, lport, branch, callid, tag, '3', totag, '', 1, self.transfer, 0, '', '', '', '')
 
                         if self.verbose == 1 and self.ofile == '':
                             print(self.c.YELLOW + msg)
